--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       padding-right: 5ch;
     }
 
-    .row1 .ticker-content { animation-duration: 80s; }
-    .row2 .ticker-content { animation-duration: 80s; }
-    .row3 .ticker-content { animation-duration: 100s; }
+    .row1 .ticker-content { animation-duration: 40s; }
+    .row2 .ticker-content { animation-duration: 60s; }
+    .row3 .ticker-content { animation-duration: 70s; }
 
     @keyframes scroll-left {
       0% { transform: translateX(0); }
@@ -51,7 +51,7 @@
       <div class="ticker-content"><span>MARK FROMOW</span></div>
     </div>
     <div class="ticker-row row2" data-top="30">
-      <div class="ticker-content"><span>FASHION DESIGN SERVICES DE CRÉATION DE MODE</span></div>
+      <div class="ticker-content"><span>FASHION DESIGN SERVICES     SERVICES DE CRÉATION DE MODE</span></div>
     </div>
     <div class="ticker-row row3" data-top="60">
       <div class="ticker-content"><span><a href="mailto:mark@markfromow.com" style="color: inherit; text-decoration: none;">MARK@MARKFROMOW.COM</a></span></div>
