--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="ticker-content"><span>FASHION DESIGN SERVICES     SERVICES DE CRÉATION DE MODE</span></div>
     </div>
     <div class="ticker-row row3" data-top="60">
-      <div class="ticker-content"><span><a href="mailto:mark@markfromow.com" style="color: inherit; text-decoration: none;">MARK@MARKFROMOW.COM</a></span></div>
+      <div class="ticker-content"><span><a href="mailto:mark@markfromow.com" style="color: inherit; text-decoration: none;">CONTACT</a></span></div>
     </div>
   </div>
   <script>
